--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.8"
 Flask = "^2.0.1"
 openai = "^1.3.3"
+python-dotenv = "^1.0.0"
+flask-cors = "^4.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
